tdf#124790: sw: handle SubtractFlys when replacing compat options

This was added in commit c5cf8824a619401627f18abc7b3049551c71ac2a
(tdf#86578: sw: fix rendering of legacy documents with fly achored at
fly), it's off by default and on for legacy ODT files.

Change-Id: I8a08106bed8b12c173d47ed66efe54fd71953c99
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92731
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95298